validation fixes
- Adds a backup client side validation in case user alters the survey flow.

- Fixes missing recaptcha error not showing

- Fixes mapping page errors not showing up

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -597,6 +597,11 @@ color scheme. See readme.md*/
 Entry Mapping Page
 
 *******************************************/
+#map-error-alerts {
+  position: absolute;
+  z-index:1011;
+  top: 0;
+}
 .mapping-icon {
   box-shadow: 2px 2px rgba(0,0,0,0.2);
 }
